<resources>
    <string name="app_name">Stop Car</string>
    <string name="verifyphone">Verify phone number</string>
    <string name="plz_img" translatable="false">choose image</string>
    <string name="plz_camera_gallery" translatable="false">gallery image</string>
    <string name="camera" translatable="false">camerar</string>
    <string name="images" translatable="false">images</string>
    <string name="please_activate_permission" translatable="false">Turn on permession</string>
    <string name="camera_closed" translatable="false">turn off camera</string>
    <string name="failed_to_open_camera" translatable="false">Camera failure</string>
    <string name="cancel" translatable="false">cancel</string>
    <string name="user_deleted" translatable="false">user deleted</string>
    <string name="no_network" translatable="false">no internet connection</string>
    <string name="password" translatable="false">PASSWORD</string>
    <string name="forget_pass" translatable="false">FORGET PASSWORD?</string>
    <string name="forget_pass_str" translatable="false">Forget password</string>
    <string name="email" translatable="false">EMAIL</string>
    <string name="firstname" translatable="false">FIRSTNAME</string>
    <string name="lastname" translatable="false">LASTNAME</string>
    <string name="mobile" translatable="false">MOBILE</string>
    <string name="next" translatable="false">NEXT</string>
    <string name="chat_now" translatable="false">Start a chat session now</string>
    <string name="done" translatable="false">DONE</string>
    <string name="cash" translatable="false">Cash</string>
    <string name="credit_debit" translatable="false">Credit/Debit</string>
    <string name="paypal" translatable="false">Paypal</string>
    <string name="select_payment_mode" translatable="false">SELECT PAYMENT MODE</string>
    <string name="reg" translatable="false">Registeration</string>
    <string name="required" translatable="false">required</string>
    <string name="ph" translatable="false">Phone number 9 digits</string>
    <string name="emailnotcorrect" translatable="false">email not correct</string>
    <string name="login" translatable="false">Login</string>
    <string name="register" translatable="false">Register</string>
    <string name="enter_otp" translatable="false">Enter OTP</string>
    <string name="submit" translatable="false">submit</string>
    <string name="resend_code" translatable="false">RESEND CODE</string>
    <string name="phone_or_email" translatable="false">Phone or email</string>
    <string name="your_email" translatable="false">your email address</string>
    <string name="dont_worry_just_enter_your_email_or_phone_below_and_we_will_send_you_the_password_reset_instructions" translatable="false">Dont worry! just enter your email or phone below and we will send you the password reset instructions</string>
    <string name="reset_password" translatable="false">Reset Password</string>
    <string name="plz_fill_data" translatable="false">Please fill all data</string>
    <string name="addpayment" translatable="false">Add payment</string>
    <string name="welcome_to_nashmi" translatable="false">welcome to Stop Car</string>
    <string name="add_payment" translatable="false">Add Payment</string>
    <string name="change" translatable="false">Change</string>
    <string name="promo_code" translatable="false">Promo Code</string>
    <string name="fare_estimate" translatable="false">Fare Estimate</string>
    <string name="pickUp" translatable="false">drop down location</string>
    <string name="enter_code_here" translatable="false">Enter code here</string>
    <string name="applycode" translatable="false">apply code</string>
    <string name="bookingsuccesful" translatable="false">Booking successful</string>ƒ
    <string name="emergancy" translatable="false">emergancy</string>
    <string name="request_ride" translatable="false">Request ride</string>
    <string name="driver_will_pick_up_you_in_s_minutes" translatable="false">Driver will pick-up you in %s</string>
    <string name="your_booking_has_been_confirmed" translatable="false">Your booking has been confirmed.</string>
    <string name="cancel_booking" translatable="false">Cancel Booking</string>
    <string name="pickuparriave" translatable="false">Pickup arrive</string>
    <string name="reason_for_cancellation" translatable="false">Reason for cancellation</string>
    <string name="rate_now" translatable="false">Rate now</string>
    <string name="need_help" translatable="false">need help</string>
    <string name="write_your_comment" translatable="false">write your comment</string>
    <string name="success" translatable="false">Success</string>
    <string name="change_password" translatable="false">Change password</string>
    <string name="emergency_contacts" translatable="false">Emergency contacts</string>
    <string name="add_contact" translatable="false">Add contact</string>
    <string name="lets_make_travel" translatable="false">Let\'s make travel safer</string>
    <string name="easily_let_your_friends" translatable="false">Easily let your friends and family follow your trip progress and see that you\'ve arrived safely at your destination</string>
    <string name="cancel_request" translatable="false">Cancel request</string>
    <string name="places" translatable="false">places</string>
    <string name="no" translatable="false">No</string>
    <string name="yes" translatable="false">Yes</string>
    <string name="edit_profile" translatable="false">Edit profile</string>
    <string name="home" translatable="false">Home</string>
    <string name="payment" translatable="false">Payment</string>
    <string name="history" translatable="false">History</string>
    <string name="notifications" translatable="false">Notifications</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="help" translatable="false">Privacy Policy</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="enter_promocode_here" translatable="false">Enter promo code here</string>
    <string name="make_request" translatable="false">Make Request</string>
    <string name="select_car_type" translatable="false">Select car type</string>
    <string name="select_truck_type" translatable="false">Select truck Type</string>
    <string name="choose_how" translatable="false">Choose how you want from nashme how to help you</string>
    <string name="continu" translatable="false">Continue</string>
    <string name="complete_rate_data" translatable="false">complete rate data</string>
    <string name="review_your_trip" translatable="false">Review your trip</string>
    <string name="booking_confirmation" translatable="false">booking confirmation</string>
    <string name="desi" translatable="false">detect distnamtion location</string>
    <string name="accept" translatable="false">accept</string>
    <string name="requests" translatable="false">requests</string>
    <string name="select_contact" translatable="false">select contact</string>
    <string name="plz_login_first" translatable="false">make Sos</string>
    <string name="call" translatable="false">Call</string>
    <string name="sos" translatable="false">Sos</string>
    <string name="newpassword" translatable="false">New password</string>
    <string name="confirm_password" translatable="false">Confirm password</string>
    <string name="code" translatable="false">Code</string>
    <string name="password_not_match" translatable="false">Password not match</string>
    <string name="choose_place" translatable="false">Choose place</string>
    <string name="edit_location" translatable="false">Edit location</string>
    <string name="open" translatable="false">please open gps provider</string>
    <string name="add" translatable="false">Add</string>
    <string name="Change_language" translatable="false">Change language</string>
    <string name="plz_select_lang" translatable="false">Please select language</string>
    <string name="add_success" translatable="false">add success</string>
    <string name="Sendtherequest" translatable="false">Send the request</string>
    <string name="your_request_is_pending" translatable="false">Your request is pending</string>
    <string name="the_company_will_respond_to_your_request_at_the_right_price_and_must_be_approved_by_your_authority_for_the_winding_up" translatable="false">The company will respond to your request at the right price and must be approved by your authority for the winding up</string>
    <string name="ok" translatable="false">OK</string>
    <string name="from" translatable="false">From</string>
    <string name="to" translatable="false">to</string>
    <string name="type_of_good" translatable="false">Type of goods</string>
    <string name="notes" translatable="false">Your Orders</string>
    <string name="continuation" translatable="false">Continue</string>
    <string name="Received" translatable="false">Received</string>
    <string name="noVicals" translatable="false">This company does not contain any added compounds yet</string>
    <string name="filedComplete" translatable="false">Please complete the empty fields</string>
    <string name="Reply_from" translatable="false">Reply from company</string>
    <string name="rent" translatable="false">Rent</string>
    <string name="enter_hours" translatable="false">Enter hours</string>
    <string name="apply" translatable="false">Apply</string>
    <string name="make_default" translatable="false">Default</string>
    <string name="delete" translatable="false">Delete</string>
    <string name="alert" translatable="false">alert</string>
    <string name="accept_policy" translatable="false">Accept Policy and restrictions</string>
    <string name="must_accept_policy" translatable="false">Must accept policy</string>
    <string name="number_of_reassemble" translatable="false">Number of reassemble</string>
    <string name="oldpassword" translatable="false">Old password</string>
    <string name="select_loc" translatable="false">Please select destination</string>
    <string name="contactus" translatable="false">Contact us</string>
    <string name="calc_fare" translatable="false">calculating fare</string>
    <string name="lang" translatable="false">en</string>
    <string name="trip_type" translatable="false">trip type</string>
    <string name="order_date" translatable="false">trip date</string>
    <string name="trip_fare" translatable="false">trip net fare</string>
    <string name="nashmi_tax" translatable="false">trip fare</string>
    <string name="billtaxies" translatable="false">discount</string>
    <string name="wallet" translatable="false">Wallet</string>
    <string name="total" translatable="false">Total</string>
    <string name="pay" translatable="false">دفع</string>
    <string name="bank_name" translatable="false">Bank name</string>
    <string name="account_num" translatable="false">account number</string>
    <string name="name" translatable="false">name</string>
    <string name="iban" translatable="false">iban</string>
    <string name="whatsapp" translatable="false">whatsapp or sms</string>
    <string name="whatsup_msg" translatable="false">After payment please send on whatsup or sms</string>
    <string name="bank_transfer" translatable="false">Bank Transfer</string>
    <string name="km" translatable="false">km</string>
    <string name="estimate_time" translatable="false">Estimation time</string>
    <string name="estimate_distance" translatable="false">Estimation distance</string>
    <string name="distance" translatable="false">Distance</string>
    <string name="current_trips" translatable="false">Current trips</string>
    <string name="with_insurance">with Insurance</string>
    <string name="tripID">Trip Number</string>
    <string name="new_trip">Make new trip</string>
    <string name="saved">Changes saved successfully</string>
</resources>
