<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:background="@color/color_white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/list_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_padding_size_medium"
        android:paddingTop="@dimen/margin_padding_size_medium"
        android:layout_marginStart="8dp"
        android:text="@string/reason_for_cancellation"
        android:textColor="#222222"
        android:fontFamily="@font/fofo12"
        android:textSize="18sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/choose_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:orientation="horizontal">


        <Button
            android:id="@+id/cancel"
            style="@style/MediumText"
            android:background="@color/transparent"
            android:text="@string/cancel"
            android:textColor="@color/graydark" />


        <Button
            android:id="@+id/applycode"
            style="@style/MediumText"
            android:background="@color/transparent"
            android:text="@string/done"
            android:textColor="@color/black" />

    </LinearLayout>
</LinearLayout>