<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:background="@color/color_white"
    android:orientation="vertical">

<EditText

    android:layout_marginTop="30dp"
    android:hint="@string/required"
    android:background="@drawable/text_shape"
    android:id="@+id/required"
    android:padding="15dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />


    <EditText
        android:textStyle="bold"
        android:gravity="top"
        android:layout_marginTop="30dp"
        android:hint="@string/notes"
        android:background="@drawable/text_shape"
        android:id="@+id/notes"
        android:padding="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="140dp" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:textStyle="bold"
        android:gravity="top"
        android:layout_marginTop="30dp"
        android:hint="@string/with_insurance"
        android:id="@+id/with_insurance"
        android:padding="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">

    </com.google.android.material.checkbox.MaterialCheckBox>
    <mehdi.sakout.fancybuttons.FancyButton
        xmlns:fancy="http://schemas.android.com/apk/res-auto"
        android:id="@+id/send"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:layout_gravity="end"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        fancy:fb_borderColor="@color/colorPrimary"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        fancy:fb_focusColor="@color/colorPrimaryDark"
        fancy:fb_radius="30dp"
        fancy:fb_text="@string/Sendtherequest"
        fancy:fb_textColor="#FFFFFF" />



    <ProgressBar
        android:visibility="gone"
        android:layout_gravity="center"
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>